--- a/privacy.html
+++ b/privacy.html
@@ -1,70 +1,104 @@
-<!-- ===================== privacy.html ===================== -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>Dominion · Privacy Policy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dominion – Privacy Policy</title>
+
   <style>
     body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       margin: 0;
-      padding: 2rem;
-      background: #0f172a;
-      color: #e5e7eb;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      background: #111;
+      color: #eee;
+      padding: 20px;
       line-height: 1.6;
     }
-    a { color: #38bdf8; }
-    .container { max-width: 800px; margin: auto; }
-    h1, h2 { color: #f8fafc; }
-    footer { margin-top: 4rem; font-size: 0.9rem; opacity: 0.8; }
+
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    h1, h2 {
+      color: #fff;
+    }
+
+    h1 {
+      margin-bottom: 24px;
+    }
+
+    h2 {
+      margin-top: 32px;
+      font-size: 1.2rem;
+    }
+
+    p {
+      color: #ccc;
+    }
+
+    a {
+      color: #4caf50;
+      text-decoration: none;
+    }
+
+    footer {
+      margin-top: 48px;
+      padding-top: 16px;
+      border-top: 1px solid #333;
+      font-size: 0.85rem;
+      color: #888;
+    }
   </style>
 </head>
 <body>
-  <main class="container">
-    <h1>Privacy Policy</h1>
 
-    <p>
-      Dominion is a fitness visualization application that integrates with the Strava API
-      to generate personal territory maps based on GPS activities.
-    </p>
+<div class="container">
+  <h1>Privacy Policy</h1>
 
-    <h2>Data Access</h2>
-    <p>
-      Dominion only accesses Strava activity data strictly necessary to generate
-      visual maps, including activity identifiers and GPS polylines.
-    </p>
+  <p>
+    Dominion is a fitness-based strategy game that allows users to visualize
+    their activities and territorial influence on a map.
+  </p>
 
-    <h2>Data Usage</h2>
-    <p>
-      Imported data is used exclusively within the application to compute
-      territory influence and display personal statistics.
-      Dominion does not sell, rent, or share user data with third parties.
-    </p>
+  <h2>Data collected</h2>
+  <p>
+    When you connect your Strava account, Dominion accesses the following data:
+  </p>
+  <ul>
+    <li>Strava athlete ID</li>
+    <li>Public activity data (GPS routes / polylines)</li>
+  </ul>
 
-    <h2>Data Retention</h2>
-    <p>
-      Users may disconnect their Strava account at any time.
-      Upon disconnection, no further data is imported.
-      Previously imported data can be deleted upon request.
-    </p>
+  <h2>How we use your data</h2>
+  <p>
+    Activity GPS data is used exclusively to calculate territory influence
+    within the Dominion game. No data is sold, shared, or used for advertising.
+  </p>
 
-    <h2>User Control</h2>
-    <p>
-      Users remain in full control of their data and may revoke access
-      directly from their Strava account settings or within Dominion.
-    </p>
+  <h2>Data storage</h2>
+  <p>
+    We store only the minimum data required to provide the service.
+    You can disconnect Strava at any time from your profile page.
+  </p>
 
-    <h2>Contact</h2>
-    <p>
-      If you have any questions regarding this policy, please contact:
-      <br />
-      <a href="mailto:contact@dominion-map.app">contact@dominion-map.app</a>
-    </p>
+  <h2>Disconnecting Strava</h2>
+  <p>
+    You may disconnect your Strava account at any time from the Profile section
+    of the app. This will revoke access to your Strava data.
+  </p>
 
-    <footer>
-      <p>© Dominion – All rights reserved</p>
-    </footer>
-  </main>
+  <h2>Contact</h2>
+  <p>
+    If you have any questions about this privacy policy, please contact:
+    <br />
+    <a href="mailto:contact@dominion.app">contact@dominion.app</a>
+  </p>
+
+  <footer>
+    © 2026 Dominion · All rights reserved
+  </footer>
+</div>
+
 </body>
 </html>
