--- a/index.html
+++ b/index.html
@@ -337,13 +337,116 @@
 
   // ---------- MAP ----------
   function loadMap() {
-    // 🔽 AQUÍ VA TU CÓDIGO DEL MAPA
-    // Debe:
-    // - cargar /territories?resolution=7
-    // - NO requerir token
-    // - ser read-only si !isAuthenticated
-    console.log("Loading map (read-only:", !isAuthenticated, ")");
+  /* ===============================
+     🌍 Map init
+     =============================== */
+
+  const map = L.map("map").setView([40.4168, -3.7038], 4);
+
+  L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+    attribution: "© OpenStreetMap"
+  }).addTo(map);
+
+  let territoryLayer = L.layerGroup().addTo(map);
+  let heatLayer = null;
+
+  /* ===============================
+     🎨 Helpers
+     =============================== */
+
+  function colorFromUser(userId) {
+    let hash = 0;
+    for (let i = 0; i < userId.length; i++) {
+      hash = userId.charCodeAt(i) + ((hash << 5) - hash);
+    }
+    const hue = Math.abs(hash) % 360;
+    return `hsl(${hue}, 70%, 50%)`;
   }
+
+  function resolutionFromZoom(zoom) {
+    if (zoom < 8) return 7;
+    if (zoom < 11) return 8;
+    if (zoom < 14) return 9;
+    return 10;
+  }
+
+  /* ===============================
+     🗺️ Load territories
+     =============================== */
+
+  async function loadTerritories() {
+    const resolution = resolutionFromZoom(map.getZoom());
+
+    territoryLayer.clearLayers();
+    if (heatLayer) {
+      map.removeLayer(heatLayer);
+      heatLayer = null;
+    }
+
+    const headers = isAuthenticated
+      ? { Authorization: `Bearer ${token}` }
+      : {};
+
+    try {
+      const res = await fetch(
+        `${BACKEND_URL}/territories?resolution=${resolution}`,
+        { headers }
+      );
+
+      const data = await res.json();
+      if (!Array.isArray(data)) return;
+
+      const heatPoints = [];
+
+      data.forEach(t => {
+        const boundary = h3.cellToBoundary(t.territory_id, true);
+        const polygon = boundary.map(p => [p[1], p[0]]);
+        const color = colorFromUser(t.owner);
+
+        const popupContent = isAuthenticated
+          ? `
+              <b>Territory</b><br/>
+              Owner: ${t.owner}<br/>
+              Influence: ${t.influence}
+            `
+          : `
+              <b>Territory</b><br/>
+              Owner: *****<br/>
+              Influence: ${Math.min(t.influence, 3)}+
+            `;
+
+        L.polygon(polygon, {
+          color,
+          weight: 2,
+          fillColor: color,
+          fillOpacity: Math.min(0.9, t.influence / 5)
+        })
+          .bindPopup(popupContent)
+          .addTo(territoryLayer);
+
+        const [lat, lng] = h3.cellToLatLng(t.territory_id);
+        heatPoints.push([lat, lng, t.influence]);
+      });
+
+      heatLayer = L.heatLayer(heatPoints, {
+        radius: 30,
+        blur: 20,
+        maxZoom: 17
+      }).addTo(map);
+
+    } catch (err) {
+      console.error("Error loading territories", err);
+    }
+  }
+
+  /* ===============================
+     🔄 Events
+     =============================== */
+
+  map.on("zoomend", loadTerritories);
+  loadTerritories();
+}
+
 
   loadMap();
 </script>
