--- a/privacy.html
+++ b/privacy.html
@@ -92,7 +92,7 @@
   <p>
     If you have any questions about this privacy policy, please contact:
     <br />
-    <a href="mailto:contact@dominion.app">contact@dominion.app</a>
+    <a href="mailto:derribatuslimites.info@gmail.com">derribatuslimites.info@gmail.com</a>
   </p>
 
   <footer>
