--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      z-index: 100;
+      z-index: 2000; /* 🔥 más alto que Leaflet */
+
     }
 
     .modal.hidden {
